2010-04-21  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Darin Adler.

        REGRESSION(r57292): Safari/Win and Chromium/Win no longer pass the acid3 test.
        https://bugs.webkit.org/show_bug.cgi?id=37902

        The issue is due to MSVC creating enums as signed. The fix is to store the value
        as unsigned.

        Test: http://acid3.acidtests.org/

        * rendering/style/RenderStyle.h:
        (WebCore::InheritedFlags): Changed type of _insideLink to unsigned.

Canonical link: https://commits.webkit.org/49275@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57994 268f45cc-cd09-0410-ab3c-d52691b4dbfc