WebCore/rendering/style/RenderStyle.h
@@ -203,7 +203,7 @@ protected:
         bool _htmlHacks : 1;
         bool _force_backgrounds_to_white : 1;
         unsigned _pointerEvents : 4; // EPointerEvents
-        EInsideLink _insideLink : 2; // Whether or not we are contained inside a link.
+        unsigned _insideLink : 2; // EInsideLink
         // 43 bits
     } inherited_flags;
 
